Style: add overflow hidden to playing page to avoid scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -47,9 +47,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  height: 100vh;
+}
 
 body {
-  min-height: 100vh;
+  height: 100vh;
   background-image: url("./assets/images/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
